# musicbrainz-simple-cover-art

./: .gitignore  CMakeLists.txt  README.md  get_cover_art.cpp
